[package]
name = "substreams-eth-block-meta"
version = "0.4.0"
description = "Substream Ethereum Block Meta Substreams tracking block at day/month boundaries"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-eth-block-meta"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
prost = "0.11"
prost-types = "0.11"
substreams = "0.5.0"
substreams-database-change = "1.0.0"
substreams-entity-change = "1.1"
substreams-sink-kv = "0.1.1"
substreams-ethereum = "0.8.0"
chrono = { version = "0.4", features = [ "std" ], default-features = false }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
